--- a/src/components/PlantationIntelligenceHero.module.css
+++ b/src/components/PlantationIntelligenceHero.module.css
@@ -9,6 +9,10 @@
   
   .textContainer {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
   
   .title {
