--- a/src/pages/AdversaryUniversePage.module.css
+++ b/src/pages/AdversaryUniversePage.module.css
@@ -1,12 +1,4 @@
-.pageContainer {
-    position: relative;
-    background-color: #000;
-    overflow: hidden;
-    color: #fff;
-    padding: 2rem;
-}
-
-.pageContainer::before {
+.darkThemeAnimation::before {
     content: '';
     position: absolute;
     top: 0;
@@ -47,7 +39,6 @@
     max-width: 800px;
     margin: 5rem auto;
     padding: 2rem;
-    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
